fixed a bug on the blog page and got rid of extra space between footer

--- a/website-1/src/components/BlogPage.css
+++ b/website-1/src/components/BlogPage.css
@@ -31,6 +31,7 @@
     margin-left: auto;
     margin-right: auto;
     overflow: hidden;
+    padding-bottom: 0%;
    
   
   }
